--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="#" id="viewSavedBookings">Book</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Flight Status</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#" >Flight Status</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Help</a></li>
                     </ul>
@@ -314,8 +314,8 @@
         </div>
     </div>
 
-
-
+   <div id="flightstatus" style="display: none;">
+      
     <h2> Indigo Flight Status</h2>
 
     <table>
@@ -354,6 +354,7 @@
             <tr><td>UK304</td><td>2025-07-11</td><td>Vistara</td><td>7:20 PM</td><td>9:40 PM</td><td>Delhi</td><td>Bangalore</td><td>₹4,100</td></tr>
         </tbody>
     </table>
+   </div>
     <script src="./indigo.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
